<resources>
    <string name="app_name">RPS</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="passwordHint">***************</string>
    <string name="forgotYouPassword">Forgot Your Password?</string>
    <string name="signIn">SIGN IN</string>
    <string name="rememberPassword">Remember Password</string>
    <string name="userName">Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="createAccount">Create Account</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reset_senha">Send recovery email</string>
    <string name="rentSpaceParking">View Spaces Parking</string>
    <string name="money">Add Balance</string>
    <string name="yourSpaces">Your parking spaces</string>
    <string name="todo">TODO</string>
</resources>