<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/cover"
        android:focusableInTouchMode="false"
        android:orientation="vertical"
        android:padding="0dp"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="161dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="28dp"
            android:padding="10dp"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="193dp"
            android:layout_height="99dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="133dp"
            android:layout_marginLeft="133dp"
            android:layout_marginTop="58dp"
            app:srcCompat="@drawable/editphoto" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:layout_weight="4"
        android:background="@drawable/rectangle_1"
        android:orientation="vertical"
        android:padding="10dp">

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="178dp"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:gravity="center|center_horizontal"
                android:padding="10dp"
                android:text="Name"
                android:textAllCaps="false"
                android:textColor="#a6aff1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/rpsScreen"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/restSpaceParking"
                android:textAllCaps="false"
                android:textColor="#a6aff1"
                android:textSize="18sp" />
        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="16dp"
                android:gravity="center|center_horizontal"
                android:padding="10dp"
                android:text="Name"
                android:textAllCaps="false"
                android:textColor="#a6aff1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/rpsScreen"
                android:layout_width="212dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/name"
                android:textAllCaps="false"
                android:textColor="#a6aff1"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="16dp"
                android:gravity="center|center_horizontal"
                android:padding="10dp"
                android:text="Last Name"
                android:textAllCaps="false"
                android:textColor="#a6aff1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/addBalanceScreen"
                android:layout_width="212dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/money"
                android:textAllCaps="false"
                android:textColor="#a6aff1"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="16dp"
                android:gravity="center|center_horizontal"
                android:padding="10dp"
                android:text="Email"
                android:textAllCaps="false"
                android:textColor="#a6aff1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/spacesScreen"
                android:layout_width="212dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/yourSpaces"
                android:textAllCaps="false"
                android:textColor="#a6aff1"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="16dp"
                android:gravity="center|center_horizontal"
                android:padding="10dp"
                android:text="Your Balance"
                android:textAllCaps="false"
                android:textColor="#a6aff1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/accountSettingsScreen"
                android:layout_width="212dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:padding="10dp"
                android:text="Account settings"
                android:textAllCaps="false"
                android:textColor="#a6aff1"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="169dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawablePadding="16dp"
                android:gravity="center|center_horizontal"
                android:padding="10dp"
                android:text="Password"
                android:textAllCaps="false"
                android:textColor="#a6aff1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/logOut"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:gravity="start"
                android:padding="10dp"
                android:text="Log out"
                android:inputType="textPassword"
                android:textAllCaps="false"
                android:textColor="#a6aff1"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        </LinearLayout>

        <ImageView
            android:id="@+id/goBack"
            android:layout_width="144dp"
            android:layout_height="90dp"
            android:layout_gravity="center|center_horizontal"
            android:adjustViewBounds="false"
            android:baselineAligned="false"
            android:cropToPadding="true"
            app:srcCompat="@drawable/goback" />

    </LinearLayout>

</LinearLayout>